# trun_detection

./: .gitignore  assistant_deepgram.py  assistant_openai.py  defined_event.py  dockerfile  minimal_assistant.py  pyproject.toml  time_consume_statistics.py  turn_detector.py  utils.py
local_package/agent_tts/: stream_adapter.py
local_package/openai/: llm.py  tts.py
