[tool.poetry]
name = "voice-pipeline-agent"
version = "0.1.0"
description = ""
authors = ["rockey20230213 <rocket23>"]
readme = "README.md"

packages = [
    {include = "voice_pipeline_agent"}
]

[tool.poetry.dependencies]
python = "^3.12"
livekit-agents = "^0.12.5"
livekit-plugins-deepgram = "^0.6.15"
livekit-plugins-google = "^0.8.1"
livekit-plugins-openai = {version = "^0.10.10", extras = ["vertex"]}
livekit-plugins-silero = "^0.7.4"
python-dotenv = "1.0"
aiofile = "3.8.8"
livekit = "^0.18.3"
livekit-plugins-turn-detector = "^0.3.4"
torch = "^2.5.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
